--- a/contact.html
+++ b/contact.html
@@ -175,55 +175,57 @@
 
 
     <!-- Contact Start -->
-    <div class="container-fluid">
-        <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Contact Us</span></h2>
-        <div class="row px-xl-5">
-            <div class="col-lg-7 mb-5">
-                <div class="contact-form bg-light p-30">
-                    <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                        <div class="control-group">
-                            <input type="text" class="form-control" id="name" placeholder="Your Name"
-                                required="required" data-validation-required-message="Please enter your name" />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="control-group">
-                            <input type="email" class="form-control" id="email" placeholder="Your Email"
-                                required="required" data-validation-required-message="Please enter your email" />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="control-group">
-                            <input type="text" class="form-control" id="subject" placeholder="Subject"
-                                required="required" data-validation-required-message="Please enter a subject" />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="control-group">
-                            <textarea class="form-control" rows="8" id="message" placeholder="Message"
-                                required="required"
-                                data-validation-required-message="Please enter your message"></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div>
-                            <button class="btn btn-primary py-2 px-4" type="submit" id="sendMessageButton">Send
-                                Message</button>
-                        </div>
-                    </form>
-                </div>
+  <div class="container-fluid">
+    <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">
+        <span class="bg-secondary pr-3">Contact Us</span>
+    </h2>
+    <div class="row px-xl-5">
+        <div class="col-lg-7 mb-5">
+            <div class="contact-form bg-light p-30">
+                <div id="success"></div>
+                <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                    <div class="control-group mb-3">
+                        <input type="text" class="form-control" id="name" placeholder="Your Name"
+                            required="required" data-validation-required-message="Please enter your name" />
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="control-group mb-3">
+                        <input type="email" class="form-control" id="email" placeholder="Your Email"
+                            required="required" data-validation-required-message="Please enter your email" />
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="control-group mb-3">
+                        <input type="text" class="form-control" id="subject" placeholder="Subject"
+                            required="required" data-validation-required-message="Please enter a subject" />
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div class="control-group mb-3">
+                        <textarea class="form-control" rows="8" id="message" placeholder="Message"
+                            required="required"
+                            data-validation-required-message="Please enter your message"></textarea>
+                        <p class="help-block text-danger"></p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary py-2 px-4" type="submit" id="sendMessageButton">Send
+                            Message</button>
+                    </div>
+                </form>
             </div>
-            <div class="col-lg-5 mb-5">
-                <div class="bg-light p-30 mb-30">
-                    <iframe style="width: 100%; height: 250px;"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3776.9484066195596!2d98.94811817497015!3d18.800452482348224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3a6bf542deb3%3A0x85fbac3033920444!2z4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4Lio4Li04Lil4Lib4LiwIOC4quC4t-C5iOC4rSDguYHguKXguLDguYDguJfguITguYLguJnguYLguKXguKLguLUg4Lih4Lir4Liy4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4LmA4LiK4Li14Lii4LiH4LmD4Lir4Lih4LmI!5e0!3m2!1sth!2sth!4v1748252224201!5m2!1sth!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
-                <div class="bg-light p-30 mb-3">
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>เชียงใหม่ ประเทศไทย</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>lnwza007@gmail.com</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary mr-3"></i>099-999999</p>
-                </div>
+        </div>
+        <div class="col-lg-5 mb-5">
+            <div class="bg-light p-30 mb-30">
+                <iframe style="width: 100%; height: 250px;"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3776.9484066195596!2d98.94811817497015!3d18.800452482348224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3a6bf542deb3%3A0x85fbac3033920444!2z4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4Lio4Li04Lil4Lib4LiwIOC4quC4t-C5iOC4rSDguYHguKXguLDguYDguJfguITguYLguJnguYLguKXguKLguLUg4Lih4Lir4Liy4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4LmA4LiK4Li14Lii4LiH4LmD4Lir4Lih4LmI!5e0!3m2!1sth!2sth!4v1748252224201!5m2!1sth!2sth" 
+                frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <div class="bg-light p-30 mb-3">
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>เชียงใหม่ ประเทศไทย</p>
+                <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>lnwza007@gmail.com</p>
+                <p class="mb-2"><i class="fa fa-phone-alt text-primary mr-3"></i>099-999999</p>
             </div>
         </div>
     </div>
+</div>
     <!-- Contact End -->
 
 
@@ -315,6 +317,42 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script>
+window.onload = function() {
+    document.getElementById('contactForm').addEventListener('submit', function(e) {
+        e.preventDefault();
+
+        // รับค่าจาก input
+        const name = document.getElementById('name').value.trim();
+        const email = document.getElementById('email').value.trim();
+        const subject = document.getElementById('subject').value.trim();
+        const message = document.getElementById('message').value.trim();
+
+        // ตรวจสอบความถูกต้องแบบง่าย (required)
+        let valid = true;
+        if (!name) { valid = false; document.getElementById('name').nextElementSibling.textContent = "กรุณากรอกชื่อ"; }
+            else { document.getElementById('name').nextElementSibling.textContent = ""; }
+        if (!email) { valid = false; document.getElementById('email').nextElementSibling.textContent = "กรุณากรอกอีเมล"; }
+            else { document.getElementById('email').nextElementSibling.textContent = ""; }
+        if (!subject) { valid = false; document.getElementById('subject').nextElementSibling.textContent = "กรุณากรอกหัวข้อ"; }
+            else { document.getElementById('subject').nextElementSibling.textContent = ""; }
+        if (!message) { valid = false; document.getElementById('message').nextElementSibling.textContent = "กรุณากรอกข้อความ"; }
+            else { document.getElementById('message').nextElementSibling.textContent = ""; }
+
+        if (!valid) return;
+
+        // แสดงข้อความสำเร็จ (mockup)
+        document.getElementById('success').innerHTML = `
+            <div class="alert alert-success">
+                ขอบคุณที่ติดต่อเรา! เราได้รับข้อความของคุณแล้ว 😊
+            </div>
+        `;
+
+        // reset form
+        document.getElementById('contactForm').reset();
+    });
+};
+</script>
 </body>
 
 </html>
