--- a/detail.html
+++ b/detail.html
@@ -27,6 +27,64 @@
 </head>
 
 <body>
+    <!-- Sign In Modal -->
+    <div class="modal fade" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="signInModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Sign In</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form  onsubmit="signIn(event)">
+          <div class="form-group">
+            <label for="signinuser">Email address </label>
+            <input type="email" class="form-control" id="signinEmail" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="signinPassword">Password</label>
+            <input type="password" class="form-control" id="signinPassword" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Sign Up Modal -->
+<div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Sign Up</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form onsubmit="signUp(event)">
+          <div class="form-group">
+            <label for="signupUsername">Username</label>
+            <input type="text" class="form-control" id="signupUsername" placeholder="Enter username">
+          </div>
+          <div class="form-group">
+            <label for="signupEmail">Email address</label>
+            <input type="email" class="form-control" id="signupEmail" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="signupPassword">Password</label>
+            <input type="password" class="form-control" id="signupPassword" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-success btn-block">Sign Up</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
     <!-- Topbar Start -->
     <div class="container-fluid">
         <div class="row bg-secondary py-1 px-xl-5">
@@ -40,14 +98,7 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">My Account</button>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <button class="dropdown-item" type="button">Sign in</button>
-                            <button class="dropdown-item" type="button">Sign up</button>
-                        </div>
-                    </div>
-                    
+                        <div class="btn-group" id="accountDropdown"></div>
                 </div>
                 <div class="d-inline-flex align-items-center d-block d-lg-none">
                     <a href="" class="btn px-0 ml-2">
@@ -622,6 +673,61 @@
     }
     document.addEventListener("DOMContentLoaded", starRate);
     </script>
+    <!--สคริปต์หน้าล็อคอินกับสร้างบัญชี-->
+<script>
+   function signUp(event) {
+  event.preventDefault();       
+
+  const username = document.getElementById('signupUsername').value;
+  const email = document.getElementById('signupEmail').value;
+  const password = document.getElementById('signupPassword').value;
+
+  fetch('http://localhost:8000/api/account/signup', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ username, email, password })  
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.success) {
+        localStorage.setItem('username', data.username);
+        updateAccountUI(); // <- เรียกตรงนี้
+        $('#signInModal').modal('hide');
+      alert("สมัครสมาชิกสำเร็จ");
+    } else {
+      alert("สมัครไม่สำเร็จ: " + data.message);
+    }
+  });
+}
+
+
+function signIn(event) {
+  event.preventDefault(); 
+
+  const email = document.getElementById('signinEmail').value; 
+  const password = document.getElementById('signinPassword').value;
+
+  fetch('http://localhost:8000/api/account/login', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email, password })
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.success) {
+        localStorage.setItem('username', data.username);
+        updateAccountUI(); // <- เรียกตรงนี้
+        $('#signInModal').modal('hide');
+      alert("ล็อกอินสำเร็จ");
+    } else {
+         alert("อีเมล์หรือรหัสผิด")
+      document.getElementById('loginError').innerText = data.message || "Login failed";
+     
+    }
+  });
+}
+</script>
+    <script src="Register.js"></script>
 </body>
 
 </html>
