--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 </head>
 
 <body>
+
+
+
+
     <!-- Sign In Modal -->
     <div class="modal fade" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="signInModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -100,14 +104,7 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">My Account</button>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <button class="dropdown-item" type="button" data-toggle="modal" data-target="#signInModal">Sign in</button>
-                            <button class="dropdown-item" type="button" data-toggle="modal" data-target="#signUpModal">Sign up</button>
-                        </div>
-                    </div>
-                   
+                        <div class="btn-group" id="accountDropdown"></div>
                 </div>
                 <div class="d-inline-flex align-items-center d-block d-lg-none">
                     <a href="" class="btn px-0 ml-2">
@@ -793,6 +790,9 @@
   .then(res => res.json())
   .then(data => {
     if (data.success) {
+        localStorage.setItem('username', data.username);
+        updateAccountUI(); // <- เรียกตรงนี้
+        $('#signInModal').modal('hide');
       alert("สมัครสมาชิกสำเร็จ");
     } else {
       alert("สมัครไม่สำเร็จ: " + data.message);
@@ -815,6 +815,9 @@ function signIn(event) {
   .then(res => res.json())
   .then(data => {
     if (data.success) {
+        localStorage.setItem('username', data.username);
+        updateAccountUI(); // <- เรียกตรงนี้
+        $('#signInModal').modal('hide');
       alert("ล็อกอินสำเร็จ");
     } else {
          alert("อีเมล์หรือรหัสผิด")
@@ -824,7 +827,7 @@ function signIn(event) {
   });
 }
 </script>
-
+<script src="Register.js"></script>
 </body>
 
 </html>
