--- a/addProducttest.html
+++ b/addProducttest.html
@@ -82,6 +82,7 @@
       });
     }
 
+    //add product
     document.getElementById('add-form').onsubmit = async e => {
       e.preventDefault();
       const f = e.target;
@@ -103,6 +104,7 @@
         image: f.image.value,
         prices: pricesArray
       };
+      console.log(data);
 
       await fetch(apiUrl, {
         method: 'POST',
