--- a/cart.html
+++ b/cart.html
@@ -173,7 +173,7 @@
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
-                        <span class="h1 text-uppercase text-dark bg-light px-2">Multi</span>
+                        <span class="h1 text-uppercase text-dark bg-light px-2">INWZA</span>
                         <span class="h1 text-uppercase text-light bg-primary px-2 ml-n1">Shop</span>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -200,7 +200,7 @@
                             </a>
                             <a href="" class="btn px-0 ml-3">
                                 <i class="fas fa-shopping-cart text-primary"></i>
-                                <span class="badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
+                                <span class="cartquantity badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
                             </a>
                         </div>
                     </div>
@@ -234,6 +234,7 @@
                     <thead class="thead-dark">
                         <tr>
                             <th>Products</th>
+                            <th>Option</th>
                             <th>Price</th>
                             <th>Quantity</th>
                             <th>Total</th>
@@ -256,13 +257,17 @@
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Cart Summary</span></h5>
                 <div class="bg-light p-30 mb-5">
                     <div class="border-bottom pb-2">
-                        <div class="d-flex justify-content-between mb-3">
+                        <div class="d-flex justify-content-between">
                             <h6>Subtotal</h6>
                             <h6 id="subtotal"></h6>
                         </div>
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-medium">Shipping</h6>
                             <h6 id="shipping" class="font-weight-medium"></h6>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <h6>Total Quantity</h6>
+                            <h6 id="totalquantity" class="font-weight-medium"></h6>
                         </div>
                     </div>
                     <div class="pt-2">
@@ -371,37 +376,57 @@
     <!--สคริปต์หน้าล็อคอินกับสร้างบัญชี-->
 <script>
   loadCart();
-  async function loadCart() {
+async function loadCart() {
   const username = localStorage.getItem('username');
   const tbody = document.getElementById('cart-body');
   let subtotal = 0;
   let shipping = 0;
   let totalprice = 0;
+  let totalquantity = 0;
 
   if (!username) {
     alert('โปรดlogin');
     return;
   }
+
   try {
-    const res = await fetch(`http://localhost:7000/api/cart?username=${encodeURIComponent(username)}`);
-    const cart = await res.json();
+    // ดึงข้อมูลตะกร้าและสินค้า
+    const [cartRes, productsRes] = await Promise.all([
+      fetch(`http://localhost:7000/api/cart?username=${encodeURIComponent(username)}`),
+      fetch(`http://localhost:7000/api/products`)
+    ]);
+    const cart = await cartRes.json();
+    const products = await productsRes.json();
 
     tbody.innerHTML = '';
 
     cart.forEach(p => {
+      const productInfo = products.find(prod => prod.id == p.id);
+      if (!productInfo) return;
       const total = p.priceSelect * p.quantity;
-      const tr = document.createElement('tr');
-      if(p.category !== "GiftCard"){
-        shipping +=40;
-      }
       subtotal += total;
-      totalprice=subtotal+shipping;
+      totalquantity+=p.quantity
+
+      // สร้าง option list จาก prices ใน productInfo
+      const optionsHtml = productInfo.prices.map(price => `
+        <option value="${price.value}" ${price.value === p.option ? 'selected' : ''}>${price.value}</option>
+      `).join('');
+      if (p.category !== "GiftCard" && p.category !== "Games") {
+        shipping += 40*p.quantity;
+      }
+      totalprice = subtotal + shipping;
+      const tr = document.createElement('tr');
       tr.innerHTML = `
-        <td class="align-middle" style="display: flex; align-items: center; gap: 10px;">
-          <img src="/img/use/product/${p.category}/${p.image}" alt="productimage" style="width: 50px;"> ${p.productname}
-          <a>${p.option}<a>
+        <td class=" cartlists align-middle clickable-td" data-id="${p.id}" style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+          <img src="/img/use/product/${p.category}/${p.image}" alt="productimage" style="width: 50px;">
+          ${p.productname}
         </td>
-        <td class="align-middle">${p.priceSelect}฿</td>
+        <td class="align-middle">
+          <select class="form-select form-select-sm cart-option-selector">
+            ${optionsHtml}
+          </select>
+        </td>
+        <td class="align-middle price-col">${p.priceSelect}฿</td>
         <td class="align-middle">
           <div class="input-group quantity mx-auto" style="width: 100px;">
             <div class="input-group-btn">
@@ -417,48 +442,71 @@
             </div>
           </div>
         </td>
-        <td class="align-middle">${total}฿</td>
+        <td class="align-middle total-col">${total}฿</td>
         <td class="align-middle">
           <button class="btn btn-sm btn-danger btn-delete">
             <i class="fa fa-times"></i>
           </button>
         </td>
       `;
-      tr.querySelector('.btn-minus').addEventListener('click', () => updateQuantity(p.id, p.quantity - 1, p.option));
-      tr.querySelector('.btn-plus').addEventListener('click', () => updateQuantity(p.id, p.quantity + 1, p.option));
+      const clickableTd = tr.querySelector('.clickable-td');
+      clickableTd.addEventListener('click', () => {
+        window.location.href = `detail.html?id=${p.id}`;
+      });
+      const select = tr.querySelector('.cart-option-selector');
+      select.addEventListener('change', async () => {
+        const newOption = select.value;
+        const optData = productInfo.prices.find(price => price.value === newOption);
+        if (!optData) return;
+
+        await updateQuantity(p.id, p.quantity, p.option, newOption, optData.salePrice);
+      });
+
+      tr.querySelector('.btn-minus').addEventListener('click', () => updateQuantity(p.id, p.quantity - 1, p.option, p.option, p.priceSelect));
+      tr.querySelector('.btn-plus').addEventListener('click', () => updateQuantity(p.id, p.quantity + 1, p.option, p.option, p.priceSelect));
       tr.querySelector('.btn-delete').addEventListener('click', () => deleteItem(p.id, p.option));
+
       tbody.appendChild(tr);
     });
-    document.getElementById('subtotal').textContent = `${subtotal}฿`
-    document.getElementById('shipping').textContent = `${shipping}฿`
-    document.getElementById('totalprice').textContent = `${totalprice}฿`
+    document.getElementById('subtotal').textContent = `${subtotal}฿`;
+    document.getElementById('shipping').textContent = `${shipping}฿`;
+    document.getElementById('totalquantity').textContent = `${totalquantity} ชิ้น`;
+    document.getElementById('totalprice').textContent = `${totalprice}฿`;
+    
+
   } catch (err) {
     console.error('เกิดข้อผิดพลาดขณะโหลดตะกร้า:', err);
   }
 }
 
-async function updateQuantity(id, newQty, option) {
-  const urlParams = new URLSearchParams(window.location.search);
+// ฟังก์ชันอัพเดทจำนวนและ option พร้อมราคาที่เลือกใหม่
+async function updateQuantity(id, newQty, oldOption, newOption, newPrice) {
   const username = localStorage.getItem('username');
   if (newQty < 1) {
-    await deleteItem(id, option); 
-    await loadCart(); 
+    await deleteItem(id, oldOption);
+    await loadCart();
     return;
   }
 
-  const res = await fetch(`http://localhost:7000/api/cart/${id}?username=${encodeURIComponent(username)}&option=${encodeURIComponent(option)}`, {
+  const res = await fetch(`http://localhost:7000/api/cart/${id}?username=${encodeURIComponent(username)}&option=${encodeURIComponent(oldOption)}`, {
     method: 'PUT',
     headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ quantity: newQty })
+    body: JSON.stringify({
+      quantity: newQty,
+      option: newOption,
+      priceSelect: newPrice
+    })
   });
 
   if (!res.ok) {
     const err = await res.json();
-    console.error('Update failed:', err);
+    alert.error('Update failed:', err);
+
   } else {
-    await loadCart(); 
+    await loadCart();
   }
 }
+
 
 async function deleteItem(id, option) {
   const urlParams = new URLSearchParams(window.location.search);
@@ -477,7 +525,11 @@ async function deleteItem(id, option) {
 }
 
 
-   function signUp(event) {
+async function checkout(){
+
+}
+
+function signUp(event) {
   event.preventDefault();       
 
   const username = document.getElementById('signupUsername').value;
