--- a/detail.html
+++ b/detail.html
@@ -102,12 +102,12 @@
                 </div>
                 <div class="d-inline-flex align-items-center d-block d-lg-none">
                     <a href="" class="btn px-0 ml-2">
-                        <i class="fas fa-heart text-dark"></i>
+                        <i class="fas fa-heart text-primary"></i>
                         <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
                     </a>
-                    <a id="cartLink" href="cart.html" class="btn px-0 ml-2">
-                        <i class="fas fa-shopping-cart text-dark"></i>
-                        <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
+                    <a href="cart.html" class="btn px-0 ml-2">
+                        <i class="fas fa-shopping-cart text-primary"></i>
+                        <span class="cartquantity badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
                     </a>
                 </div>
             </div>
@@ -173,7 +173,7 @@
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
-                        <span class="h1 text-uppercase text-dark bg-light px-2">Multi</span>
+                        <span class="h1 text-uppercase text-dark bg-light px-2">INWZA</span>
                         <span class="h1 text-uppercase text-light bg-primary px-2 ml-n1">Shop</span>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -200,7 +200,7 @@
                             </a>
                             <a href="cart.html" class="btn px-0 ml-3">
                                 <i class="fas fa-shopping-cart text-primary"></i>
-                                <span class="badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
+                                <span class="cartquantity badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
                             </a>
                         </div>
                     </div>
@@ -383,15 +383,15 @@
                                     <form>
                                         <div class="form-group">
                                             <label for="message">Your Review *</label>
-                                            <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
+                                            <textarea id="reviewmessage" cols="30" rows="5" class="form-control"></textarea>
                                         </div>
                                         <div class="form-group">
                                             <label for="name">Your Name *</label>
-                                            <input type="text" class="form-control" id="name">
+                                            <input type="reviewtext" class="form-control" id="name">
                                         </div>
                                         <div class="form-group">
                                             <label for="email">Your Email *</label>
-                                            <input type="email" class="form-control" id="email">
+                                            <input type="reviewemail" class="form-control" id="email">
                                         </div>
                                         <div class="form-group mb-0">
                                             <input type="submit" value="Leave Your Review" class="btn btn-primary px-3">
@@ -633,27 +633,12 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.js" ></script>
     <script>
-        window.onload=function(){
-            
-        }
-        document.addEventListener("DOMContentLoaded", starRate);
+    document.addEventListener('DOMContentLoaded', () => {
+    starRate();
+});
 
-    const ajax = async (config) => {
-    const request = await fetch(config.url,{
-      method: config.method,
-      headers:{
-        'Accept' : 'application/json',
-        'Content-Type' : 'application/json'
-      },
-      body : JSON.stringify(config.data)
-
-    });
-    const response = await request.json();
-    console.log(response)
-    return response;
-  }
         function starRate(){
             const stars = document.querySelectorAll('.rating-stars .star');
         const ratingInput = document.getElementById('rating');
@@ -793,7 +778,7 @@ document.getElementById('addToCart').addEventListener('click', async function (e
 
     <!--สคริปต์หน้าล็อคอินกับสร้างบัญชี-->
 <script>
-   function signUp(event) {
+function signUp(event) {
   event.preventDefault();       
 
   const username = document.getElementById('signupUsername').value;
